tests/paczka1/small_fuzzy/70807902.err
Error in line 1: nVb5oPEE A591 44,5
Error in line 2: nVb5oPEE A523 77,1
